--- a/src/lib/locales/en-GB/_common.json
+++ b/src/lib/locales/en-GB/_common.json
@@ -1,5 +1,6 @@
 {
 	"title": "{guild} - {client} Portal",
 	"staff_dashboard": "Staff Dashboard",
-	"settings_panel": "Settings Panel"
+	"settings_panel": "Settings Panel",
+	"logout": "Log out"
 }
