new login page design

--- a/src/lib/locales/en-GB/_common.json
+++ b/src/lib/locales/en-GB/_common.json
@@ -1,6 +1,8 @@
 {
-	"title": "{guild} - {client} Portal",
-	"staff_dashboard": "Staff Dashboard",
+	"language": "Language",
+	"logout": "Log out",
 	"settings_panel": "Settings Panel",
-	"logout": "Log out"
+	"staff_dashboard": "Staff Dashboard",
+	"theme": "Theme",
+	"title": "{guild} - {client} Portal"
 }
